# SJW_skills

./: README.md
prompt-structure-auditor/scripts/: .gitignore  README.md  pyproject.toml
prompt-structure-auditor/scripts/psa/: __init__.py  __main__.py  cli.py
prompt-structure-auditor/scripts/psa/advise/: BRIDGE.md  __init__.py  bridge.py  brief.py  engine.py  persist.py  principles.py  schema.py
prompt-structure-auditor/scripts/psa/apply/: __init__.py  engine.py  gitops.py  report.py
prompt-structure-auditor/scripts/psa/core/: __init__.py  canon.py  config.py  ids.py  ignore_globs.py  pipeline.py  ports.py
prompt-structure-auditor/scripts/psa/discovery/: __init__.py  documentation.py
prompt-structure-auditor/scripts/psa/executors/: __init__.py
prompt-structure-auditor/scripts/psa/findings/: __init__.py
prompt-structure-auditor/scripts/psa/lifecycle/: __init__.py  baseline.py  diff.py
prompt-structure-auditor/scripts/psa/model/: __init__.py  builder.py  classify.py  types.py
prompt-structure-auditor/scripts/psa/optimise/: __init__.py  state.py  status.py
prompt-structure-auditor/scripts/psa/patch/: __init__.py  apply.py  generate.py  validate.py
prompt-structure-auditor/scripts/psa/preview/: __init__.py  model.py
prompt-structure-auditor/scripts/psa/recommend/: __init__.py  graph.py
prompt-structure-auditor/scripts/psa/report/: __init__.py  advise_view.py  audit_view.py  doctor.py  inventory.py  plan_view.py  preview_view.py
prompt-structure-auditor/scripts/tests/: conftest.py  contract.py  contract_plan.py  contract_preview.py
(+61 files in other folders)
